--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource-variable/onest": "^5.1.0",
     "portfolio": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
