--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fontsource-variable/onest": "^5.1.0",
+    "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
     "lucide-react": "^0.462.0",
     "portfolio": "file:",
